--- a/README
+++ b/README
@@ -4,3 +4,4 @@ Copy raw python and upload to coding website.
 This code is raw python. 
 Before uploading, read the License.
 ENJOY
+*MAY BE EORRS IN CODE*
