--- a/README
+++ b/README
@@ -2,6 +2,8 @@
 Pong w python
 Copy raw python and upload to coding website.
 This code is raw python. 
+Go to most recent release for game
 Before uploading, read the License.
 ENJOY
+
 *MAY BE EORRS IN CODE*
