--- a/README
+++ b/README
@@ -4,6 +4,8 @@ Copy raw python and upload to coding website.
 This code is raw python. 
 Go to most recent release for game
 Before uploading, read the License.
+Replit: https://replit.com/@MichaelMarcinia/Pong-1#main.py
 ENJOY
+
 
 *MAY BE EORRS IN CODE*
